# 05_chat

./: .gitignore  Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml  test.rest
chat-core/: Cargo.toml
chat-core/src/: lib.rs
chat-core/src/middlewares/: auth.rs  mod.rs
chat-server/: Cargo.toml
chat-server/fixture/: test.sql
chat-server/src/: lib.rs
chat-server/src/handlers/: chat.rs  message.rs  mod.rs  workspace.rs
chat-server/src/models/: chat.rs  message.rs  mod.rs  user.rs  workspace.rs
chat-test/tests/: chat.rs
chat_server/: Cargo.toml  app.yml
chat_server/fixture/: test.sql
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  message.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  request_id.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
migrations/: 20250114142627_initial.sql  20250117024301_workspace.sql  20250120014511_triggers.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: lib.rs  main.rs  sse.rs
src/: lib.rs
