[workspace]
members = ["chat_server", "notify_server"]
resolver = "2"


[workspace.dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = [
  "http2",
  "multipart",
  "query",
  "tracing",
  # "macros",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.3", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "chrono",
] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
jwt-simple = { version = "0.12.11", default-features = false, features = [
  "pure-rust",
] }
