[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
test-util = ["http-body-util", "sqlx-db-tester"]

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
hex = "0.4.3"
mime_guess = "2.0.5"
serde = { workspace = true }
serde_json = "1.0.135"
serde_yaml = { workspace = true }
sha1 = "0.10.6"
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chat-core = { workspace = true }
jwt-simple = { workspace = true }
http-body-util = { version = "0.1.2", optional = true }
sqlx-db-tester = { version = "0.5.0", optional = true }

[dev-dependencies]
chat-server = { workspace = true, features = ["test-util"] }
